# microwave-inverse-design

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md  lab_measurements.example.json  measured_eps.example.json  measured_eps.template.json
docs/: BACKLOG.md  BENCHMARKS.md  BENCH_PROTOCOL.md  FRONTIER.md  MATERIALS.md  MATURITY.md  REAL_DATA_SOURCES.md
scripts/: build_rf_port_report.py  evaluate_deposit_envelope.py  export_design.py  export_openems.py  fetch_reputable_touchstone_sources.py  generate_openems_stub.py  ingest_deposit.py  ingest_lab_measurements.py  ingest_literature_datasets.py  ingest_measured_dielectrics.py  ingest_ore_profile.py  ingest_probe_measurements.py  ingest_vna_s11.py  plot_fields.py  prepare_test_data.py  run_bench_calibration.py  run_benchmarks.py  run_demo.py  run_design_eval.py  run_ensemble_search.py  run_field_search.py  run_freq_robust_search.py  run_grain_sweep.py  run_materials_catalog.py  run_meep_compare.py  run_metal_model_check.py  run_multi_search.py  run_ore_profile.py  run_phantom_study.py  run_pipeline.py  run_port_validation.py  run_real_data_eval.py  run_search.py  run_solver_triangulation.py  run_stress_search.py  run_sweeps.py  run_thermal.py  run_thermal_ensemble_search.py  run_thermal_search.py  run_validation.py  (+2 more)
tests/: test_applicator.py  test_backlog_b2_g3_d4.py  test_backlog_c0_c2_e2_h0.py  test_backlog_d4_e2_h0_c0.py  test_backlog_e2_f1_d2.py  test_backlog_i0_c2_d2_d3.py  test_benchmarks.py  test_coupling.py  test_deposit_envelope_gate.py  test_fdfd.py  (+30 more)
(+139 files in other folders)
